--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -25,7 +25,7 @@
                     <th>ID</th>
                     <th>Name</th>
                     <th>Email</th>
-                    <th>Created At</th>
+                    <th>Created On</th>
                     <th>Actions</th>
                 </tr>
             </thead>
